fixing nav letter spacing on windows

--- a/themes/csil/scss/imports/_nav.scss
+++ b/themes/csil/scss/imports/_nav.scss
@@ -112,7 +112,7 @@
   }
 }
 
-.nav-main li {
+.nav-main li {0
   @media screen and (min-width: $break-medium) {
     /*border-right: 1px solid #505050;*/
     display: table-cell;
@@ -149,10 +149,11 @@
   @media screen and (min-width: $break-large) {
     @include rem(14);
     padding: .25em 1.1em .50em;
-    letter-spacing: 0.05em;
+    
   }
   @media screen and (min-width: $break-xlarge) {
     @include rem(15);
+    letter-spacing: 0.05em;
     padding: .25em 1.2em .50em;
 
   }
